--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ theme: jekyll-agency
 url    : "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 
-title      : Your Awesome Website 
+title      : Benny Shakes
 email      : your-email@example.com #this is also the email contact forms will go to
-description: "Site description"
+description: "Waffles, Milkshakes and more..."
 author     : Your Name
-# logo:     #optional, defaults to site title
-  # path: assets\img\clients\creative-market.jpg
-  # height: 60 #height in px, defaults to 52px
+logo:     #optional, defaults to site title
+  path: assets\img\clients\creative-market.jpg
+  height: 100 #height in px, defaults to 52px
 
 analytics:
   google: #Google Analytics tracking code here
