--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ url    : "" # the base hostname & protocol for your site, e.g. http://example.co
 baseurl: "" # the subpath of your site, e.g. /blog
 
 title      : Benny Shakes
-email      : your-email@example.com #this is also the email contact forms will go to
+email      : yigithankocaoglu@gmail.com #this is also the email contact forms will go to
 description: "Waffles, Milkshakes and more..."
 author     : Your Name
 logo:     #optional, defaults to site title
